[package]
name = "nanosvg-sys"
version = "0.1.0"
authors = ["onetruffle"]
repository = "https://github.com/nickbrowne/nsvg"
keywords = ["svg", "nanosvg"]
description = "A simple SVG parser and rasterizer using NanoSVG"
license = "Zlib/MIT"
readme = "README.md"

[features]
default = ["image"]

[dependencies]
image = { version = "0.23.14", optional = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
bindgen = { version = "0.26.3", optional = true }
cc = "1.0"

[badges]
travis-ci = { repository = "nickbrowne/nsvg", branch = "master" }
appveyor = { repository = "nickbrowne/nsvg", branch = "master" }
